--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,11 @@ section {
     margin: 0 auto;
 }
 
+main section {
+    margin-top: 120px;
+    text-align: center;
+}
+
 /* banner section styles */
 
 .banner-section {
@@ -28,4 +33,41 @@ section {
     padding: 177px 530px 10px;
     margin-bottom: 0px;
 
+}
+
+/* discount section styles */
+.discount-section {
+    font-family: 'Inter', sans-serif;
+}
+
+.discount-section *{
+    margin: 0px;
+}
+
+.discount-section h2 {
+    color: #F00;
+    font-size: 88px;
+    font-weight: 700;
+    margin-bottom: 48px;
+}
+
+
+
+.discount-section p {
+    color: #F00;
+    font-size: 24px;
+    font-weight: 500;
+    margin-bottom: 16px;
+}
+
+.discount-section h3 {
+    color: #070211;
+    font-size: 48px;
+    font-weight: 700;
+    margin-bottom: 48px;
+}
+
+.discount-section img{
+    width: 803px;
+    height: 500px;
 }
