--- a/styles.css
+++ b/styles.css
@@ -172,13 +172,77 @@ p {
     width: 70%;
 }
 
-.accessory-1{
+.accessories img:hover {
+    transform: scale(1.05);
+    cursor: pointer;
+}
+
+.accessory-1 {
     display: flex;
     justify-content: space-between;
 }
 
-.accessory-2{
+.accessory-2 {
     display: flex;
     justify-content: space-between;
     margin-top: 24px;
 }
+
+.newsletter-section {
+    border-radius: 16px;
+    background: rgba(255, 0, 0, 0.05);
+    height: 600px;
+    text-align: center;
+}
+
+.newsletter-section img {
+    margin-top: 80px;
+}
+
+.newsletter-section h2 {
+    color: #070211;
+    font-family: Merriweather;
+    font-size: 48px;
+    font-weight: 900;
+    text-transform: capitalize;
+    margin-top: 40px;
+}
+
+.newsletter-section p {
+    color: rgba(7, 2, 17, 0.60);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 400;
+    width: 70%;
+}
+
+form input {
+    height: 72px;
+    background: #FFF;
+    border: none;
+}
+
+form input[type="text"] {
+    width: 438px;
+    background: #FFF;
+    padding-left: 30px;
+    border-radius: 50px 0px 0px 50px;
+    color: rgba(7, 2, 17, 0.30);
+    font-family: Inter;
+    font-size: 18px;
+    font-weight: 400;
+}
+
+form input[type="submit"] {
+    width: 210px;
+    border-radius: 0px 50px 50px 0px;
+    background: #F00;
+    color: #FFF;
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 600;
+    text-transform: capitalize;
+}
+
+/* newsletter-section styles */
