--- a/styles.css
+++ b/styles.css
@@ -308,11 +308,97 @@ hr {
     margin-top: 50px;
 }
 
-.footer-end a{
+.footer-end a {
     text-decoration: none;
     color: #FFF;
 }
 
-.footer-end p{
+.footer-end p {
     margin-left: 0px;
+}
+
+/* bonus-offer-section styles */
+.bonus-offer-section {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 80px;
+}
+
+.offer-text * {
+    margin: 0px;
+}
+
+.offer-text h3 {
+    color: #F00;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+}
+
+.offer-text h2 {
+    color: #070211;
+    font-family: Merriweather;
+    font-size: 48px;
+    font-weight: 900;
+    text-transform: capitalize;
+    padding-top: 5px;
+}
+
+.offer-text p {
+    color: rgba(7, 2, 17, 0.60);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 400;
+    margin-top: 22px;
+}
+
+
+.offer-img {
+    border-radius: 463px;
+    border: 15px solid #F00;
+    width: 463px;
+    height: 463px;
+
+}
+
+.offer-img img {
+    margin: 50px;
+    width: 365px;
+    height: 365px;
+    border-radius: 365px;
+}
+
+.offer-end * {
+    margin: 0px;
+}
+
+.offer-end {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+
+
+.offer-end h2 {
+    color: #F00;
+    font-family: Inter;
+    font-size: 48px;
+    font-weight: 700;
+}
+
+
+.offer-end p {
+    padding-top: 5px;
+    color: rgba(7, 2, 17, 0.60);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.offer-end img {
+    width: 140px;
+    height: 140px;
+    margin-top: 40px;
 }
