Virtual contact style modify

--- a/styles.css
+++ b/styles.css
@@ -279,6 +279,10 @@ footer {
     margin-top: 120px;
 }
 
+.virtual-contact{
+    margin-right: 120px;
+}
+
 hr {
     background: rgba(255, 255, 255, 0.15);
     ;
